# SPOmiAlign

./: README.md  SPOmiAlign.yml  align_h5ad.py  reassignment.py
SPOmiAlign/: data_preprocessing.py  reassignment.py  roma.py
demo/notebook/: PUCK29.ipynb  S1toS2.ipynb  sm2st.ipynb
demo/python/: PUCK29.py  PUCK43.py  S1S2.py  sm2st.py
software/RoMa-main/: README.md
software/RoMa-main/tests/: test.py
software/fused-local-corr-master/fused-local-corr-master/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
software/fused-local-corr-master/fused-local-corr-master/.github/workflows/: build.yml
software/fused-local-corr-master/fused-local-corr-master/local_corr/: __init__.py  ops.py
software/fused-local-corr-master/fused-local-corr-master/local_corr/csrc/: corr.cpp
software/fused-local-corr-master/fused-local-corr-master/local_corr/csrc/cuda/: corr.cu
software/fused-local-corr-master/fused-local-corr-master/test/: test_local_corr.py
