[project]
name = "fused-local-corr"
version = "0.2.2"
description = "Fused Local Correlation in PyTorch"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Johan Edstedt", email = "johan.edstedt@liu.se" },
]

requires-python = ">=3.9"
dependencies = [
    "torch>=2.7.1",
    "numpy",
]
[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
]
build-backend = "setuptools.build_meta"

